package learn.design.pattern.behavioral.strategy;

/**
 * 飞行行为
 *
 * @author ykthree
 */
public interface FlyBehavior {

	/**
	 * 飞行行为
	 */
	void fly();

}
