package learn.design.pattern.behavioral.strategy;

/**
 * 叫行为
 */
public interface QuackBehavior {

	/**
	 * 叫的行为
	 */
	void quack();
}
